# dummy-signposting

./: Dockerfile  README.md  pyproject.toml
resources/: linkset-01.json  linkset-02.json
src/: main.py
src/conf/: settings.toml
